# SoftwareTechnologyFoundation

./: CMakeLists.txt  README.md  compile.cpp  compile.h  createTable.cpp  createTable.h  grammarAnalysis.cpp  grammarAnalysis.h  inputSQL.cpp  inputSQL.h  main.cpp  main2.cpp  runJava.cpp  semanticAnalysis.cpp  semanticAnalysis.h  wordAnalysis.cpp  wordAnalysis.h
